--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <header class="jumbotron text-center">
+    <header class="jumbotron text-center custom-header">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
@@ -31,7 +31,68 @@
 
     <div id="day_planner" class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-block" id="8am">
+        <div class="col-1 hour"> 8am </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="9am">
+        <div class="col-1 hour"> 9am </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="10am">
+        <div class="col-1 hour"> 10am </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="11am">
+        <div class="col-1 hour"> 11am </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="12am">
+        <div class="col-1 hour"> 12pm </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="1pm">
+        <div class="col-1 hour"> 1pm </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="2pm">
+        <div class="col-1 hour"> 2pm </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="3pm">
+        <div class="col-1 hour"> 3pm </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="4pm">
+        <div class="col-1 hour"> 4pm </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="5pm">
+        <div class="col-1 hour"> 5pm </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
+      <div class="row time-block" id="6pm">
+        <div class="col-1 hour"> 6pm </div>
+        <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
+        <button class="col-1 saveBtn"> save</button>
+      </div>
     </div>
+
+    <footer class=" text-center custom-footer ">
+      <h1 class="display-3">Work Day Scheduler</h1>
+      <p class="lead">A simple calendar app for scheduling your work day</p>
+    
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
