added local storage

--- a/index.html
+++ b/index.html
@@ -31,57 +31,57 @@
 
     <div id="day_planner" class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block" id="8am">
+      <div class="row time-block" id="8am" data-hour="8">
         <div class="col-1 hour"> 8am </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="9am">
+      <div class="row time-block" id="9am" data-hour="9" >
         <div class="col-1 hour"> 9am </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="10am">
+      <div class="row time-block" id="10am" data-hour="10">
         <div class="col-1 hour"> 10am </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="11am">
+      <div class="row time-block" id="11am" data-hour="11">
         <div class="col-1 hour"> 11am </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="12am">
+      <div class="row time-block" id="12pm" data-hour="12">
         <div class="col-1 hour"> 12pm </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="1pm">
+      <div class="row time-block" id="1pm" data-hour="13" >
         <div class="col-1 hour"> 1pm </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="2pm">
+      <div class="row time-block" id="2pm" data-hour="14" >
         <div class="col-1 hour"> 2pm </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="3pm">
+      <div class="row time-block" id="3pm"data-hour="15">
         <div class="col-1 hour"> 3pm </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="4pm">
+      <div class="row time-block" id="4pm"  data-hour="16">
         <div class="col-1 hour"> 4pm </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="5pm">
+      <div class="row time-block" id="5pm" data-hour="17">
         <div class="col-1 hour"> 5pm </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
       </div>
-      <div class="row time-block" id="6pm">
+      <div class="row time-block" id="6pm" data-hour="18">
         <div class="col-1 hour"> 6pm </div>
         <textarea name="9am" id="event_text" class="col-10" rows="3"></textarea>
         <button class="col-1 saveBtn"> save</button>
