finished read me

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
     </div>
 
-    <footer class=" text-center custom-footer ">
+    <footer class="jumbotron text-center custom-footer ">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
     
